--- a/Lottery/src/sass/style.sass
+++ b/Lottery/src/sass/style.sass
@@ -23,7 +23,7 @@ $orangeText: #FFA801
     background-image: url(../src/img/header-page_bg.png)
     background-repeat: no-repeat
     background-size: cover
-    height: 100vh
+    height: 80vh
     width: 100%
     padding-top: 10px
 
@@ -572,3 +572,17 @@ $orangeText: #FFA801
         display: block
         margin-bottom: 0px !important
         
+.footer
+    padding: 20px 0px
+    background-color: #fff
+
+    &__img
+
+    &__link-list
+        margin: 0
+    &__link
+        list-style-type: none
+        a
+            font-size: 16px
+            line-height: 22px
+            color: #1D1D1D
