--- a/Lottery/css/style.css
+++ b/Lottery/css/style.css
@@ -33,14 +33,18 @@
 
 .header {
   background-color: #fff;
-  padding: 0px 15px;
   border-radius: 10px;
+}
+
+.header__burger {
+  display: none;
 }
 
 .header__content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  padding: 0px 15px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -48,6 +52,7 @@
       -ms-flex-pack: justify;
           justify-content: space-between;
   height: 60px;
+  width: 100%;
 }
 
 .nav {
@@ -66,6 +71,9 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: 100%;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   list-style-type: none;
   margin: 0px;
   padding: 0px;
@@ -74,7 +82,6 @@
 .header__nav__item {
   padding: 5px;
   display: inline-block;
-  margin-right: 45px;
 }
 
 .header__link {
@@ -103,6 +110,54 @@
 
 .login {
   padding: 10px 15px;
+}
+
+@media screen and (max-width: 767px) {
+  .header__burger {
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 20px;
+    height: 2px;
+    width: 20px;
+    background-color: red;
+    z-index: 3;
+    position: relative;
+  }
+  .header__burger::after, .header__burger::before {
+    content: '';
+    z-index: 3;
+    position: absolute;
+    left: 0;
+    height: 2px;
+    width: 20px;
+    background-color: inherit;
+  }
+  .header__burger::before {
+    top: 5px;
+  }
+  .header__burger::after {
+    bottom: 5px;
+  }
+  .nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 3;
+    background-color: white;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .header-nav {
+    position: fixed;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 4;
+  }
 }
 
 .section__head {
