--- a/Lottery/src/sass/style.sass
+++ b/Lottery/src/sass/style.sass
@@ -29,14 +29,17 @@ $orangeText: #FFA801
 
 .header 
     background-color: #fff
-    padding: 0px 15px
     border-radius: 10px
+    &__burger
+        display: none
 
 .header__content
     display: flex
+    padding: 0px 15px
     align-items: center
     justify-content: space-between
     height: 60px
+    width: 100%
 
 .nav
     display: flex
@@ -45,6 +48,8 @@ $orangeText: #FFA801
 
 .header__nav
     display: flex
+    width: 100%
+    justify-content: space-around
     list-style-type: none
     margin: 0px
     padding: 0px
@@ -52,7 +57,6 @@ $orangeText: #FFA801
 .header__nav__item
     padding: 5px
     display: inline-block
-    margin-right: 45px
 
 .header__link
     color: $mainText
@@ -60,7 +64,6 @@ $orangeText: #FFA801
     transition-duration: 0.3s
     &:hover
         transition-duration: 0.3s
-        
         text-decoration: none
         outline: none
         color: $purpleText
@@ -75,6 +78,47 @@ $orangeText: #FFA801
 
 .login
     padding: 10px 15px
+
+@media screen and ( max-width:  767px)
+    .header__burger
+        display: block
+        position: relative
+        width: 30px
+        height: 20px
+        height: 2px
+        width: 20px
+        background-color: red
+        z-index: 3
+        position: relative
+        &::after, &::before
+            content: ''
+            z-index: 3
+            position: absolute
+            left: 0
+            height: 2px
+            width: 20px
+            background-color: inherit
+        &::before
+            top: 5px
+        &::after
+            bottom: 5px
+    .nav
+        position: fixed
+        top: 0
+        left: 0
+        width: 100%
+        height: 100%
+        z-index: 3
+        background-color: white
+        justify-content: center
+
+    .header-nav
+        position: fixed
+        position: absolute
+        top: 0
+        left: 0
+        z-index: 4
+    
 
 .section__head
     font-size: 40px
