--- a/main_src/style.css
+++ b/main_src/style.css
@@ -65,6 +65,7 @@ body {
     text-decoration: none;
     color: #000;
     font-weight: bold;
+    text-align: center;
 }
 
 .card__wrap, .card__img {
