--- a/photoGrad/sass/style.sass
+++ b/photoGrad/sass/style.sass
@@ -243,11 +243,11 @@ section
         display: flex
         align-items: center
         .prev-button
-            background-image: url(/photograd/img/prev-arrow.svg)
+            background-image: url(../img/prev-arrow.svg)
             background-position: center
             background-repeat: no-repeat
         .next-button
-            background-image: url(/photograd/img/nex-arrow.svg)
+            background-image: url(../img/nex-arrow.svg)
             background-position: center
             background-repeat: no-repeat
 
@@ -353,6 +353,7 @@ section
             object-fit: cover
         
 .portfolio
+    padding-top: 40px
     .content    
         display: flex
         flex-direction: column
@@ -415,11 +416,11 @@ section
         margin-bottom: 40px
         align-items: center
         .prev-button
-            background-image: url(/photograd/img/prev-arrow.svg)
+            background-image: url(../img/prev-arrow.svg)
             background-position: center
             background-repeat: no-repeat
         .next-button
-            background-image: url(/photograd/img/nex-arrow.svg)
+            background-image: url(../img/nex-arrow.svg)
             background-position: center
             background-repeat: no-repeat
 
