--- a/photoGrad/sass/style.sass
+++ b/photoGrad/sass/style.sass
@@ -1,12 +1,4 @@
-@font-face
-    font-family: Compact
-    src: url("../fonts/сompact.ttf") format("truetype")
-    
-@font-face
-    font-family: Prestige
-    src: url("../fonts/prestige.ttf") format("truetype")
-
-$prestige: Prestige, arial
+$prestige: PrestigeNormal, arial
 $compact: Compact
 
 $milk: #FCFCF5
