--- a/Mir/sass/style.sass
+++ b/Mir/sass/style.sass
@@ -2,6 +2,7 @@
     margin: 0
     padding: 0
     font-family: 'Open Sans', sans-serif
+    font-weight: 600
     font-size: 21px
     transition: all .1s ease-in 0s
     
@@ -151,29 +152,30 @@ body
         justify-content: center
         flex-wrap: wrap
     &__img
-        margin-bottom: 1em
+        height: 80px
+        width: 80px
+        margin-bottom: 1.5em
     &__title
         text-transform: uppercase
         color: #1C6DA3
         font-size: 18px
-        margin-bottom: 1em
+        margin-bottom: 2em
     &__text
-        font-size: 14px
+        font-size: 16px
         &::first-letter
             text-transform: uppercase
     &__option
-        padding: 10px
+        padding: 25px 15px 10px 15px
         margin: 3px
         width: 22%
-        height: 305px
+        min-height: 300px
         background-color: #fff
         display: flex
         text-align: center
         align-items: center
-        justify-content: center
+        justify-content: 
         flex-direction: column
-        &:hover
-            color: #1C6DA3
+    
     &__photos
         display: flex
         flex-direction: row
@@ -382,24 +384,16 @@ body
         &__h2
             font-size: 22px
     .about
-        &__photo:nth-of-type(1)
-            width: 100%
+        &__photo
+            margin: 2px
             img 
                 height: 100%
+                max-height: 200px
                 max-width: 300px
-                object-fit: cover
-                float: none
+                object-fit: contain
                 position: relative
                 left: 50%
                 transform: translateX(-50%)
-        &__photo:nth-of-type(2)
-            display: none
-        &__photo:nth-of-type(3)
-            display: none
-        &__photo:nth-last-of-type(2)
-            width: 20%
-        &__photo:last-of-type
-            width: 50%
     .registration
         &__top
             span
