--- a/solution/css/media.css
+++ b/solution/css/media.css
@@ -467,6 +467,10 @@
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px) {
+  .indicators__txt{
+    max-width: 100px;
+    text-align: left;
+  }
   .swiper-container-horizontal>.swiper-scrollbar {
     width: 85%;
   }
