--- a/solution/css/main.css
+++ b/solution/css/main.css
@@ -170,7 +170,7 @@ body {
 /* ------------- *Intro ------------- */
 
 .intro {
-  background: url(../img/bg/intro.jpg) 0 35%/cover no-repeat;
+  background: url(../img/bg/intro.png) 0 35%/cover no-repeat;
 }
 
 .intro .container {
@@ -313,15 +313,16 @@ body {
 }
 
 .steps__dot {
-  height: 40px;
-  width: 40px;
+  height: 25px;
+  width: 25px;
   border-radius: 50%;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
-  border: 7px solid transparent;
-  box-shadow: inset 0px 0px 10px #2c3642;
+  background-color: transparent;
+  border: 6px solid #8ec9c9;
+  /* box-shadow: 0px 0px 10px #2c3642; */
   position: relative;
   z-index: 200;
   transition: all .1s ease-in;
@@ -330,43 +331,193 @@ body {
   -ms-transition: all .1s ease-in;
   -o-transition: all .1s ease-in;
   display: none;
-  
+}
+
+.steps__dot:hover div {
+  height: 1px;
+  width: 1px;
+  border-radius: 50%;
+  box-shadow: 7px 9px 30px 17px rgb(164, 255, 255, .7);
+}
+
+.steps__dot.active div {
+  height: 1px;
+  width: 1px;
+  border-radius: 50%;
+  box-shadow: 7px 9px 30px 17px rgb(164, 255, 255, .7);
 }
 
 .steps__dot.active {
-  box-shadow: inset 0px 0px 8px #4d8cdf;
+  border: 6px solid #d2f6f6;
+  box-shadow: 0px 0px 8px #fff;
 }
 
 .steps__dot:hover {
   cursor: pointer;
-  box-shadow: inset 0px 0px 8px #4d8cdf;
+  border: 6px solid #d2f6f6;
+  box-shadow: 0px 0px 8px #fff;
 }
 
 .steps__kitchen #fasade {
-  top: 30%;
-  left: 74%;
+  top: 56%;
+  left: 65%;
   display: block;
 }
 .steps__kitchen #glass-table{
-  top: 85%;
-  left: 47%;
+  top: 52%;
+  left: 30%;
   display: block;
 }
 .steps__kitchen #apron{
-  top: 55%;
-  left: 55%;
+  top: 29%;
+  left: 72%;
   display: block;
 }
 .steps__kitchen #shield{
-  top: 50%;
-  left: 7%;
+  top: 42%;
+  left: 0%;
   display: block;
 }
 .steps__kitchen #shelf{
   top: 20%;
-  left: 53%;
+  left: 81%;
   display: block;
 }
+
+.steps__guest #partitions{
+  display: block;
+  top: 3%;
+  left: 39%;
+}
+.steps__guest #tv{
+  display: block;
+  top: 25%;
+  left: 69%;
+}
+.steps__guest #wall{
+  display: block;
+  top: 12%;
+  left: 70%;
+}
+.steps__guest #servant{
+  display: block;
+  top: 40%;
+  left: 5%;
+}
+.steps__guest #glass-table{
+  display: block;
+  top: 63%;
+  left: 65%;
+}
+.steps__guest #glass-furniture{
+  display: block;
+  top: 45%;
+  left: 59%;
+}
+
+
+.steps__wc #mirror{
+  display: block;
+  top: 25%;
+  left: 45%;
+}
+.steps__wc #shower-screen{
+  display: block;
+  top: 12%;
+  left: 74%;
+}
+.steps__wc #wall{
+  display: block;
+  top: 11%;
+  left: 23%;
+}
+.steps__wc #fasade{
+  display: block;
+  top: 55%;
+  left: 26%;
+}
+
+
+.steps__bedroom #wall{
+  display: block;
+  top: 20%;
+  left: 56%;
+}
+.steps__bedroom #closet{
+  display: block;
+  top: 22%;
+  left: 94%;
+}
+.steps__bedroom #mirror{
+  display: block;
+  top: 13%;
+  left: 43%;
+}
+.steps__bedroom #glass-furniture{
+  display: block;
+  top: 46%;
+  left: 64%;
+}
+.steps__bedroom #pedestal{
+  display: block;
+  top: 43%;
+  left: 45%;
+}
+.steps__bedroom #glass{
+  display: block;
+  top: 9%;
+  left: 21%;
+}
+
+
+.steps__child #mirror{
+  display: block;
+  top: 1%;
+  left: 1%;
+}
+.steps__child #child-furniture{
+  display: block;
+  top: 1%;
+  left: 1%;
+}
+.steps__child #marker-desk{
+  display: block;
+  top: 1%;
+  left: 1%;
+}
+.steps__child #cupboard{
+  display: block;
+  top: 1%;
+  left: 1%;
+}
+
+
+.steps__hall #wall{
+  display: block;
+  top: 12%;
+  left: 54%;
+}
+.steps__hall #closet{
+  display: block;
+  top: 25%;
+  left: 72%;
+}
+.steps__hall #mirror{
+  display: block;
+  top: 18%;
+  left: 28.5%;
+}
+.steps__hall #furniture{
+  display: block;
+  top: 47%;
+  left: 24%;
+}
+.steps__hall #doors{
+  display: block;
+  top: 13%;
+  left: 42%;
+}
+
 
 .number__item.active {
   top: 5px;
@@ -452,7 +603,9 @@ body {
 .indicators__item.ready .indicators__dots:before {
   background: url(../img/icons/i-check.png) center no-repeat #9bc4c5;
 }
-
+.indicators__item.ready:hover{
+  cursor: pointer;
+}
 .indicators__item.ready:after {
   background: #9bc4c5;
 }
@@ -468,7 +621,9 @@ body {
 .steps__item {
   position: relative;
 }
-
+.steps-nav{
+  min-height: 800px;
+}
 .steps-nav__box {
   padding: 60px 60px 110px 0;
 }
@@ -481,7 +636,15 @@ body {
   font-weight: normal;
   text-transform: uppercase;
 }
+.steps-nav__link.active .steps-nav__txt{
+  font-size: 20px;
+  color: #fff;
+}
 
+.steps-nav__link.active .steps-nav__img{
+  background: url("img/zones/min/1-min.jpg") center center / cover no-repeat;
+  opacity: 1;
+}
 .steps-nav__item:not(:last-child) .steps-nav__link {
   border-bottom: 1px solid #d8d8d8;
 }
@@ -526,9 +689,13 @@ body {
 }
 
 .steps__image {
-  right: 0;bottom: 0;
+  right: 0;
+  top: 0;
   position: absolute;
-  width: 80%;height: 981px;height: 99%;
+  width: 80%;
+  max-width: 1750px;
+  max-height: 981px;
+  height: 99%;
 }
 
 .steps-list {
@@ -622,12 +789,19 @@ i.plus {
 
 .bloom__link {
   display: block;
-  width: 45px;height: 45px;
+  width: 43px;
+  height: 40px;
   border: 1px solid transparent;
+}
+
+.bloom__link.active,
+.bloom__link.active img {
+  border-color: #000;
 }
 
 .bloom__link img {
   display: block;
+  height: 100%;
   border: 1px solid #e8e8e8;
   -webkit-transition: all .3s;
   -o-transition: all .3s;
@@ -818,6 +992,10 @@ input[type="checkbox"]:checked + span:before {
 .form__btn {
   margin-top: 50px;
   padding: 21px 39px;
+}
+
+.steps__head a.btn{
+  margin-bottom: 10px;
 }
 
 .steps__image__small {
@@ -1116,6 +1294,7 @@ input[type="checkbox"]:checked + span:before {
 
 .modal-pp {
   z-index: 200;
+  
 }
 
 .modal__box {
@@ -1123,7 +1302,11 @@ input[type="checkbox"]:checked + span:before {
   margin: 50px auto;
   position: relative;
   padding: 50px 30px;
-  max-width: 520px;width: 96%;
+  max-width: 520px;
+  width: 96%;
+  max-height: 700px;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .modal__header h2 {
@@ -1144,9 +1327,7 @@ input[type="checkbox"]:checked + span:before {
   opacity: .6;
 }
 
-.modal-pp__text {
-  
-}
+/* .modal-pp__text {} */
 
 .modal__body {
   margin-top: 40px;
