--- a/solution/css/main.css
+++ b/solution/css/main.css
@@ -344,7 +344,7 @@ body {
 
 .steps__dot.active {
   border: 6px solid #d2f6f6;
-  box-shadow: 0px 0px 8px #fff;
+  box-shadow: 0px 0px 8px #ffffff;
 }
 
 .steps__dot:hover {
