--- a/business/sass/style.sass
+++ b/business/sass/style.sass
@@ -299,6 +299,7 @@ body
         padding: 15px 20px 30px 20px
         margin-bottom: 20px
         overflow: hidden
+        height: auto
         p
             font-size: 17px
             line-height: 1.8em
