--- a/business/sass/style.sass
+++ b/business/sass/style.sass
@@ -328,8 +328,18 @@ body
     justify-content: center
     img
         object-fit: contain
-        
-        
+
+.swiper-pagination, .swiper-pagination1, .swiper-pagination2
+    text-align: center
+    position: relative
+
+.swiper-pagination1
+    span
+        margin: 0px 3px
+    
+
+.swiper-pagination-bullet-active
+    background-color: #000
             
 .swiper-container
     max-width: 760px
