--- a/business/sass/media.sass
+++ b/business/sass/media.sass
@@ -1,4 +1,6 @@
 @media screen and ( min-width:  1001px)
+    .swiper-pagination, .swiper-pagination1, .swiper-pagination2
+        display: none
     .swiper-container1, .swiper-container2
         .swiper-slide
             width: auto
@@ -26,7 +28,7 @@
             display: block
             .header__contacts, .header__account, .header__login, .header__city
                 display: block
-            .header__contacts
+            .header__contacts, .header__account
                 display: flex
                 flex-direction: column
                 align-items: flex-start
@@ -42,13 +44,19 @@
             padding: 15px 40px 20px 
         &__video
             padding: 10px 40px
+            margin-bottom: 20px
             &::after
                 display: none
+        &__author
+            margin-top: 10px
+            margin-bottom: 5px
         &__partners
             &-header
                 justify-content: center
         .swiper-container
             max-width: 100%
+        .button
+            margin-top: 20px
     .aside
         width: 100%
         margin-top: 20px
@@ -87,6 +95,7 @@
             a
                 font-size: 10px
     .footer
+        padding-top: 20px
         margin-bottom: 10px
         .nav
             margin-top: 0px
