--- a/business/sass/style.sass
+++ b/business/sass/style.sass
@@ -109,7 +109,14 @@ body
         height: 53px    
         width: 60px
     &__city
-        border-bottom: 1px solid #707070
+        border: none
+        border-bottom: 2px solid $main_grey
+        appearance: none
+        padding: 7px
+        &:hover
+            cursor: pointer
+        &:focus
+            outline: none
     &__contacts
         display: flex
         flex-direction: column
@@ -119,20 +126,20 @@ body
         text-decoration: none
         color: #000
         font-size: 18px
-        font-weight: 900
+        font-weight: 800
     &__recall
         outline: none
         line-height: 16px
         color: #C5020B
         font-size: 10px
         text-transform: uppercase
-        font-weight: 900
+        font-weight: 800
     &__login
         &-link
             text-decoration: none
             text-transform: uppercase
             font-size: 11px
-            font-weight: 900
+            font-weight: 800
             &:nth-of-type(1)
                 color: #000
             &:nth-of-type(2)
@@ -146,7 +153,7 @@ body
             text-decoration: none
             font-size: 11px
             color: #000
-            font-weight: 900
+            font-weight: 800
             &:nth-of-type(2)
                 text-transform: none
                 line-height: 18px
@@ -176,7 +183,7 @@ body
         a
             color: #000
             line-height: 19px
-            font-weight: 900
+            font-weight: 800
             text-transform: uppercase
             text-decoration: none
             font-size: 13px
@@ -246,11 +253,12 @@ body
             height: 20px
     &__red-text
         font-size: 18px
+        font-style: italic 
         color: #AF0109
         font-weight: 500
     &__header
         font-size: 14px
-        font-weight: 500
+        font-weight: 800
         text-transform: uppercase
         color: #000
     &__author
@@ -258,7 +266,7 @@ body
             line-height: 18px
             text-transform: uppercase
             font-size: 12px
-            font-weight: 500
+            font-weight: 600
         p:nth-of-type(3)
             font-weight: 900
     &__player
