--- a/business/sass/media.sass
+++ b/business/sass/media.sass
@@ -15,18 +15,19 @@
             align-items: center
             position: fixed
             top: 0
-            padding-top: 10px
-            width: calc(100vw - 80px)
+            left: 0
+            width: 100%
             z-index: 50
             background-color: #fff
-        .header__contacts, .header__account, .header__login, .header__city
+            padding: 10px 40px 0px
+        .header__contacts, .header__account, .header__login, .header__select
             display: none
         &__burger
             display: block
             margin-bottom: 13px
         &__mobile
             display: block
-            .header__contacts, .header__account, .header__login, .header__city
+            .header__contacts, .header__account, .header__login, .header__select
                 display: block
             .header__contacts, .header__account
                 display: flex
@@ -129,7 +130,7 @@
         padding: 0px 15px
     .header
         &__content
-            width: calc(100vw - 40px)
+            padding: 10px 10px 0px
         &__skew
             height: 40px
             width: 30px
@@ -145,6 +146,8 @@
                     width: 50px
                     margin-left: 20px
                     margin-right: 15px
+        .nav
+            padding-top: 0px
     .main
         &__video
             padding: 10px 10px
