--- a/business/sass/style.sass
+++ b/business/sass/style.sass
@@ -82,6 +82,7 @@ body
         position: relative
         display: none
         z-index: 20
+        transition: all .2s ease-in 0s
         span
             top: 9px
             display: block
@@ -90,7 +91,9 @@ body
             height: 2px
             background-color: #000
             left: 0
+            transform: scale(1)
         &::before, &::after
+            transition: all .2s ease-in 0s
             content: ''
             display: block
             position: absolute
@@ -104,6 +107,18 @@ body
             bottom: 0
         &:hover
             cursor: pointer
+        &.active
+            transition: all .2s ease-in 0s
+            &::before, &::after
+            &::before
+                transform: rotate(45deg)
+                top: 9px
+            &::after
+                transform: rotate(-45deg)
+                bottom: 9px
+            span
+                transition: all .2s ease-in 0s
+                transform: scale(0)
             
             
     &__skew
@@ -199,6 +214,7 @@ body
     &__item
         list-style-type: none
         display: inline-block
+        text-align: center
         a
             color: #000
             line-height: 19px
