--- a/business/sass/media.sass
+++ b/business/sass/media.sass
@@ -4,12 +4,22 @@
     .swiper-container1, .swiper-container2
         .swiper-slide
             width: auto
+@media screen and ( max-width:  1500px)
+    .header, .footer
+        .container
+            max-width: 1100px
+    .nav
+        &__item
+            a
+                font-size: 12px
 @media screen and ( max-width:  1160px)
     .container
         padding: 0px 40px
         &-main
             flex-direction: column-reverse
     .header
+        .nav
+            margin-top: 60px
         padding-top: 20px
         &__content
             align-items: center
@@ -88,7 +98,7 @@
         &__info
             display: none
     .nav
-        padding-top: 30px
+        padding-top: 0px
         &__divide
             margin-top: 18px
             height: 13px
@@ -105,8 +115,14 @@
                     font-size: 10px
         &__policy
             margin-top: 20px
+@media screen and ( max-width:  1000px)
+    .nav
+        margin-top: 30px
+
 
 @media screen and ( max-width:  860px)
+    body
+        background-image: none
     .main
         &__header
             font-size: 18px
