--- a/business/sass/media.sass
+++ b/business/sass/media.sass
@@ -1,4 +1,6 @@
 @media screen and ( min-width:  1001px)
+    .nav
+        padding: 0px 20px
     .swiper-pagination, .swiper-pagination1, .swiper-pagination2
         display: none
     .swiper-container1, .swiper-container2
@@ -58,6 +60,8 @@
             margin-bottom: 20px
             &::after
                 display: none
+            &-text
+                max-width: 350px
         &__author
             margin-top: 10px
             margin-bottom: 5px
