--- a/business/sass/style.sass
+++ b/business/sass/style.sass
@@ -13,7 +13,7 @@ body
     min-height: 100vh
     background-image: url('../img/bg.png')
     background-repeat: no-repeat
-    background-position-x: center
+    background-position-x: 50px
     background-position-y: 100px
     background-size: contain
     overflow-x: hidden
@@ -25,7 +25,7 @@ body
 
 .header
     width: 100%
-    padding-top: 80px
+    padding-top: 30px
     margin-bottom: 15px
     &__mobile
         padding: 90px 10px 20px
@@ -72,7 +72,7 @@ body
             img
                 height: 84px
                 width: 80px
-                margin-left: 35px
+                margin-left: 5px
         &-container>span
             font-weight: 500
             font-size: 13px
@@ -546,7 +546,7 @@ body
                 background-color: #c9c9c9
 
     &__content
-        margin-top: 50px
+        margin-top: 10px
         display: flex
         align-items: center
         justify-content: space-between
@@ -576,7 +576,7 @@ body
             img
                 height: 62px
                 width: 60px
-                margin-left: 15px
+                margin-left: 5px
         &-container>span
             font-weight: 500
             font-size: 10px
